# kinto-emailer

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  Makefile  README.rst  dev-requirements.txt  kinto.ini  pyproject.toml  requirements.in  requirements.txt  setup.py  tox.ini  validate_setup.py
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml  tests.yml
kinto_emailer/: __init__.py
kinto_emailer/tests/: functional.py  test_command_send.py  test_includeme.py
kinto_emailer/tests/config/: kinto-7.X.ini  kinto.ini
src/kinto_emailer/: __init__.py
tests/: functional.py  test_includeme.py
