[project]
dynamic = ["version", "dependencies"]
name = "kinto-emailer"
description = "Kinto emailer plugin"
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "License :: OSI Approved :: Apache Software License"
]
keywords = ["web services"]
authors = [
  {name = "Mozilla Services", email = "developers@kinto-storage.org"},
]

[tool.setuptools.packages.find]
include = ["kinto_emailer"]

[project.urls]
Repository = "https://github.com/Kinto/kinto-emailer"

[project.scripts]
kinto-send-email = "kinto_emailer.command_send:main"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }

[project.optional-dependencies]
dev = [
    "ruff",
    "kinto-client",
    "kinto-signer",
    "mock",
    "pytest",
    "pytest-cache",
    "pytest-cov",
    "tox",
    "webtest",
]

[tool.setuptools_scm]

[tool.coverage.run]
omit = [
    "kinto_emailer/tests/*",
]
relative_files = true

[tool.ruff]
line-length = 99
extend-exclude = [
    "__pycache__",
    ".venv/",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # flake8
    "F",
    # isort
    "I",
]
ignore = [
    # `format` will wrap lines.
    "E501",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
